# rs-gfa

./: .gitignore  Cargo.toml  LICENSE  readme.md
benches/: parsing_benchmark.rs
src/: cigar.rs  gafpaf.rs  gfa.rs  gfa_name_conversion.rs  gfageneric.rs  lib.rs  main.rs  mmap.rs  optfields.rs  parser.rs  thingfa.rs  writer.rs
src/gfa/: name_conversion.rs  orientation.rs  traits.rs
src/parser/: error.rs
test/gfas/: A-3105.gfa  A-3105.sort.gfa  DRB1-3123.gfa  DRB1-3123.sort.gfa  diatom.gfa  diatom_map.json  lil.gfa  lil_map.json
tests/: lines.rs
