[package]
name = "gfa"
version = "0.8.0"
authors = ["christian@chfi.se"]
edition = "2018"
license = "MIT"
description = "Library for working with graphs in the GFA (Graphical Fragment Assembly) format"
repository = "https://github.com/chfi/rs-gfa"
readme = "readme.md"
keywords = ["bioinformatics", "parser", "graph"]
categories = ["science"]

[dependencies]
lazy_static = "1.4.0"
regex = "1"
bstr = { version = "0.2", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "5"
bytemuck = { version = "1.4", features = ["derive"] }
fnv = "1.0"

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "parsing_benchmark"
harness = false
