[package]
name = "gfa"
version = "0.9.0"
authors = ["christian@chfi.se"]
edition = "2018"
license = "MIT"
description = "Library for working with graphs in the GFA (Graphical Fragment Assembly) format"
repository = "https://github.com/chfi/rs-gfa"
readme = "readme.md"
keywords = ["bioinformatics", "parser", "graph"]
categories = ["science"]

[features]
serde1 = ["serde", "serde_json", "bstr/serde1"]

[dependencies]
lazy_static = "1.4.0"
regex = "1"
nom = "5"
bytemuck = { version = "1.4", features = ["derive"] }
fnv = "1.0"
serde = { version = "1.0", features = ["derive"], optional =  true}
serde_json = { version = "1.0", optional = true }

[dependencies.bstr]
version = "0.2"
default-features = false
features = ["std"]

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "parsing_benchmark"
harness = false
